# Betriebsysteme

BashUebung/: fileEinlese.sh  test.sh  test.txt  users.sh
Blatt2/: uebung4.sh
Blatt4/: CMakeLists.txt
Blatt4/Blatt4/: CMakeLists.txt  fibunachi.c  fibunachiLoop.c  handlingChars.c  jumpingPointer.c  loop.c  nestedLoop.c  recursion.c  staticVar.c
Blatt4/Blatt5/: CMakeLists.txt  aufgabe1.c  functionPtr.c  permutation.c
Blatt7/LinkedList/: .directory  CMakeLists.txt  LinkedList.c  LinkedList.h  main.c
TheadTest/: CMakeLists.txt  main.c
